// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor acp --help 1`] = `
"codetutor acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: codetutor.local)
                                                               [string] [default: "codetutor.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor mcp --help 1`] = `
"codetutor mcp

manage MCP (Model Context Protocol) servers

Commands:
  codetutor mcp add [name]     add an MCP server
  codetutor mcp list           list MCP servers and their status                       [aliases: ls]
  codetutor mcp auth [name]    authenticate with an OAuth-enabled MCP server
  codetutor mcp logout [name]  remove OAuth credentials for an MCP server
  codetutor mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor attach --help 1`] = `
"codetutor attach <url>

attach to a running CodeTutor server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to CODETUTOR_SERVER_PASSWORD)           [string]
  -u, --username      basic auth username (defaults to CODETUTOR_SERVER_USERNAME or 'codetutor')
                                                                                            [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor run --help 1`] = `
"codetutor run [message..]

ask CodeTutor to help with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running CodeTutor server (e.g., http://localhost:4096)     [string]
  -p, --password     basic auth password (defaults to CODETUTOR_SERVER_PASSWORD)            [string]
  -u, --username     basic auth username (defaults to CODETUTOR_SERVER_USERNAME or 'codetutor')
                                                                                            [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor debug --help 1`] = `
"codetutor debug

debugging and troubleshooting tools

Commands:
  codetutor debug config        show resolved configuration
  codetutor debug lsp           LSP debugging utilities
  codetutor debug rg            ripgrep debugging utilities
  codetutor debug file          file system debugging utilities
  codetutor debug scrap         list all known projects
  codetutor debug skill         list all available skills
  codetutor debug snapshot      snapshot debugging utilities
  codetutor debug startup       print startup timing
  codetutor debug agent <name>  show agent configuration details
  codetutor debug v2            debug v2 catalog and built-in plugins
  codetutor debug info          show debug information
  codetutor debug paths         show global paths (data, config, cache, state)
  codetutor debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor providers --help 1`] = `
"codetutor providers

show managed model setup information

Commands:
  codetutor providers list               list quarantined provider credentials         [aliases: ls]
  codetutor providers remove [provider]  remove a quarantined credential
  codetutor providers export <file>      export quarantined credentials to a protected file

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor agent --help 1`] = `
"codetutor agent

manage agents

Commands:
  codetutor agent create  create a new agent
  codetutor agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor upgrade --help 1`] = `
"codetutor upgrade [target]

upgrade CodeTutor to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor uninstall --help 1`] = `
"codetutor uninstall

uninstall CodeTutor and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor serve --help 1`] = `
"codetutor serve

starts a headless CodeTutor server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: codetutor.local)
                                                               [string] [default: "codetutor.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor web --help 1`] = `
"codetutor web

start CodeTutor server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: codetutor.local)
                                                               [string] [default: "codetutor.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor models --help 1`] = `
"codetutor models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor stats --help 1`] = `
"codetutor stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor export --help 1`] = `
"codetutor export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor import --help 1`] = `
"codetutor import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor pr --help 1`] = `
"codetutor pr <number>

fetch and checkout a GitHub PR branch, then run CodeTutor

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor session --help 1`] = `
"codetutor session

manage sessions

Commands:
  codetutor session list                list sessions
  codetutor session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor plugin --help 1`] = `
"codetutor plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor db --help 1`] = `
"codetutor db

database tools

Commands:
  codetutor db [query]     open an interactive sqlite3 shell or run a query                [default]
  codetutor db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor learn --help 1`] = `
"codetutor learn

learn JavaScript and TypeScript with guided lessons

Commands:
  codetutor learn list                  list built-in lessons
  codetutor learn start <lesson-id>     start or resume a lesson
  codetutor learn resume                show the most recently active lesson
  codetutor learn status                show curriculum progress
  codetutor learn check [lesson-id]     run deterministic checks for a lesson
  codetutor learn hint [lesson-id]      show the next layered hint
  codetutor learn solution [lesson-id]  reveal the solution without overwriting your work
  codetutor learn reset <lesson-id>     restore a lesson's starter files
  codetutor learn level [level]         show or change your teaching level

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor account --help 1`] = `
"codetutor account

manage your CodeTutor account

Commands:
  codetutor account login [url]               log in to CodeTutor
  codetutor account logout [email]            log out from CodeTutor
  codetutor account status                    show account status
  codetutor account open                      open the active CodeTutor account
  codetutor account plan                      show the active subscription plan
  codetutor account plans                     list CodeTutor subscription plans
  codetutor account usage                     show managed AI usage and credit
  codetutor account upgrade <plan>            upgrade or change the subscription plan
  codetutor account topup <pack>              buy prepaid managed AI credit
  codetutor account billing                   open the CodeTutor billing portal
  codetutor account profile                   show your tutor profile
  codetutor account sessions                  list signed-in devices and sessions
  codetutor account revoke-session [session]  revoke a device session
  codetutor account strict-mode [state]       require browser approval whenever the interactive CLI
                                              starts
  codetutor account service-keys              list scoped service keys
  codetutor account service-key-create        create a scoped service key
  codetutor account service-key-revoke <key>  revoke a scoped service key
  codetutor account export                    export your CodeTutor account data
  codetutor account delete                    schedule account deletion

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor mcp list --help 1`] = `
"codetutor mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor mcp add --help 1`] = `
"codetutor mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor mcp auth --help 1`] = `
"codetutor mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  codetutor mcp auth list  list OAuth-capable MCP servers and their auth status        [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor mcp logout --help 1`] = `
"codetutor mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor providers list --help 1`] = `
"codetutor providers list

list quarantined provider credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor providers remove --help 1`] = `
"codetutor providers remove [provider]

remove a quarantined credential

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor providers export --help 1`] = `
"codetutor providers export <file>

export quarantined credentials to a protected file

Positionals:
  file                                                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor agent create --help 1`] = `
"codetutor agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor agent list --help 1`] = `
"codetutor agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor session list --help 1`] = `
"codetutor session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor session delete --help 1`] = `
"codetutor session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor db path --help 1`] = `
"codetutor db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor learn list --help 1`] = `
"codetutor learn list

list built-in lessons

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --level       filter by learner level
                                          [string] [choices: "beginner", "intermediate", "advanced"]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor learn start --help 1`] = `
"codetutor learn start <lesson-id>

start or resume a lesson

Positionals:
  lesson-id                                                                      [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --reset       replace the lesson workspace with starter files       [boolean] [default: false]
      --force       confirm a destructive lesson reset                    [boolean] [default: false]
      --tui         open the tutor after scaffolding                       [boolean] [default: true]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor learn resume --help 1`] = `
"codetutor learn resume

show the most recently active lesson

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor learn status --help 1`] = `
"codetutor learn status

show curriculum progress

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor learn check --help 1`] = `
"codetutor learn check [lesson-id]

run deterministic checks for a lesson

Positionals:
  lesson-id                                                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor learn hint --help 1`] = `
"codetutor learn hint [lesson-id]

show the next layered hint

Positionals:
  lesson-id                                                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor learn solution --help 1`] = `
"codetutor learn solution [lesson-id]

reveal the solution without overwriting your work

Positionals:
  lesson-id                                                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor learn reset --help 1`] = `
"codetutor learn reset <lesson-id>

restore a lesson's starter files

Positionals:
  lesson-id                                                                      [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --force       confirm destructive workspace reset                   [boolean] [default: false]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor learn level --help 1`] = `
"codetutor learn level [level]

show or change your teaching level

Positionals:
  level                                   [string] [choices: "beginner", "intermediate", "advanced"]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor account plan --help 1`] = `
"codetutor account plan

show the active subscription plan

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor account plans --help 1`] = `
"codetutor account plans

list CodeTutor subscription plans

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor account usage --help 1`] = `
"codetutor account usage

show managed AI usage and credit

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor account upgrade --help 1`] = `
"codetutor account upgrade <plan>

upgrade or change the subscription plan

Positionals:
  plan                                               [string] [required] [choices: "starter", "pro"]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor account topup --help 1`] = `
"codetutor account topup <pack>

buy prepaid managed AI credit

Positionals:
  pack                                                [string] [required] [choices: "5", "10", "25"]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`CodeTutor CLI help-text snapshots every documented command emits stable help text: codetutor account billing --help 1`] = `
"codetutor account billing

open the CodeTutor billing portal

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
